metadatadeploy/objects/EMR_System__c.object
<CustomObject>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <label>EMR System</label>
    
    <nameField>
        
        <label>EMR System Name</label>
        
        
        <type>Text</type>
        
    </nameField>
    
    <pluralLabel>EMR Systems</pluralLabel>
    
    
    <sharingModel>ReadWrite</sharingModel>
    
    
    
<fields>
        
    <fullName>Account__c</fullName>
        
    <deleteConstraint>SetNull</deleteConstraint>
        
    <description>Lookup to parent account that owns EMR (Organization)</description>
        
        
    <label>Account</label>
        
    <lookupFilter>
            
        <active>true</active>
            
        <errorMessage>EMR Systems must look up to an Organization-type account</errorMessage>
            
        <filterItems>
                
            <field>Account.Type</field>
                
            <operation>equals</operation>
                
            <value>Organization</value>
                
        </filterItems>
            
        <isOptional>false</isOptional>
            
    </lookupFilter>
        
    <referenceTo>Account</referenceTo>
        
    <relationshipLabel>EMR Systems</relationshipLabel>
        
    <relationshipName>EMR_Systems</relationshipName>
        
        
        
        
    <type>Lookup</type>
        
</fields>
    <fields>
        
    <fullName>End_Date__c</fullName>
        
        
    <label>End Date</label>
        
        
        
        
    <type>Date</type>
        
</fields>
    <fields>
        
    <fullName>Start_Date__c</fullName>
        
        
    <label>Start Date</label>
        
        
        
        
    <type>Date</type>
        
</fields>
    <fields>
        
    <fullName>Status__c</fullName>
        
        
    <label>Status</label>
        
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>Implementing</fullName>
                    
                    
                <label>Implementing</label>
                    
            </value>
                
            <value>
                    
                <fullName>Active</fullName>
                    
                    
                <label>Active</label>
                    
            </value>
                
            <value>
                    
                <fullName>Inactive</fullName>
                    
                    
                <label>Inactive</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
</fields>
</CustomObject>